@@ -63,6 +63,7 @@ Where "NUMBER" is the bug number.
    and other functions (Claessens Xavier).
  - WIN32: Auto-loading perl scripts now also works from:
    C:\Program Files\XChat\Plugins\
+ - Better command-line parameter parsing via GOption.
  - 
  - 
 
